--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,1 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+Note: To access the files, you must have Cisco Packet Tracer installed.
